[package]
name = "cs311proj"
version = "0.1.0"
authors = ["Eric Semeniuc <3838856+esemeniuc@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#futures-preview = "=0.3.0-alpha.19"
async-std = "1.0.1"
commands = "0.0.5"